# FxSocket-Python-SDK

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: manage_accounts.py  stream_quotes.py  terminal_rest.py
src/fxsocket/: __init__.py  _http.py  client.py  config.py  enums.py  errors.py  management.py  models.py
src/fxsocket/terminal/: __init__.py  client.py  stream.py
tests/: test_errors.py  test_management.py  test_private_servers.py  test_stream.py  test_terminal.py
